--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,7 +41,7 @@
         <div class="footer">
           <span id="footer-links">
             <a href="http://www.rpgroup.caltech.edu" class="footer-link">Phillips Lab</a> <span class="separator">&bull;</span>
-            <a href="http://www.github.com/rpgroup-pboc/be262" class="footer-link">GitHub Repo</a>
+            <a href="http://www.github.com/rpgroup-pboc/ncbs_pboc" class="footer-link">GitHub Repo</a>
             <br /><br />
             <a href="http://www.caltech.edu"><img src="{{ site.baseurl }}/images/Caltech_LOGO-BLACK-RGB.png" style="max-height: 40px; max-width: 50%; align: center;"></a>
           </span>
